# raygene3d-demo

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.json
asset/helmet-gltf/: config.json
asset/shaders/: base.hlsl  brdf.hlsl  common.hlsl  lightmap_average.hlsl  lightmap_sw_traced.hlsl  packing.hlsl  random.hlsl  render_3d_environment.hlsl  render_3d_geom_meshlet.glsl  render_3d_geom_meshlet.hlsl  render_3d_geom_raster.hlsl  render_3d_hw_traced.glsl  render_3d_hw_traced.hlsl  render_3d_present.hlsl  render_3d_reflection_probe.hlsl  render_3d_unshadowed.hlsl  spark_advanced.hlsl  spark_deferred.hlsl  spark_deferred_shading.hlsl  spark_environment.hlsl  spark_forward.hlsl  spark_geom_meshlet.glsl  spark_geom_raster.hlsl  spark_geometry.hlsl  spark_geometry_data.hlsl  spark_hw_trace.glsl  spark_hw_traced.glsl  spark_present.hlsl  spark_reflection_probe.hlsl  spark_shadow.hlsl  spark_shadowed.hlsl  spark_shadowed_deferred.hlsl  spark_simple.hlsl  spark_surface_data.hlsl  spark_sw_traced.hlsl  spark_sw_traced_deferred.hlsl  spark_unshadowed.hlsl  surface.hlsl  traverse.hlsl
asset/shaders/ImageBasedLighting/: Fibonacci.hlsl  ImageBasedLighting.hlsl  common.hlsl  image_based_lighting.hlsl  reflection_probe.hlsl  utils.hlsl
asset/spheres-gltf/: config.json
asset/sponza/: config.json  sponza.mtl
asset/sponza-gltf/: config.json
broker/: bvh_broker.cpp  bvh_broker.h  environment_broker.cpp  environment_broker.h  import_broker.cpp  import_broker.h  io_broker.cpp  io_broker.h  lightmap_broker.cpp  lightmap_broker.h  lightmap_mode.h  lightmap_scope.cpp  lightmap_scope.h  meshoptimizer_broker.cpp  meshoptimizer_broker.h  mikktspace_broker.cpp  mikktspace_broker.h  photonmap_broker.cpp  photonmap_broker.h  render_3d_broker.cpp  render_3d_broker.h  render_3d_mode.cpp  render_3d_mode.h  render_3d_scope.cpp  render_3d_scope.h  render_3d_technique.cpp  render_3d_technique.h  render_ui_broker.cpp  render_ui_broker.h  scene_broker.cpp  scene_broker.h  trace_broker.cpp  trace_broker.h  xatlas_broker.cpp  xatlas_broker.h
broker/io/: mode.cpp  mode.h  scope.cpp  scope.h
broker/io/mode/: gltf_converter.cpp  gltf_converter.h  obj_converter.cpp  obj_converter.h
broker/lightmap/: mode.cpp  mode.h  scope.cpp  scope.h
broker/lightmap/mode/: hw_traced_atlas.cpp  hw_traced_atlas.h  sw_traced_atlas.cpp  sw_traced_atlas.h
broker/render_3d/: cubemap_shadow.cpp  cubemap_shadow.h  hw_traced_shadow.cpp  hw_traced_shadow.h  mode.cpp  mode.h  no_shadow.cpp  no_shadow.h  scope.cpp  scope.h  sw_traced_shadow.cpp  sw_traced_shadow.h
broker/render_3d/mode/: cubemap_shadow.cpp  cubemap_shadow.h  hw_traced_shadow.cpp  hw_traced_shadow.h  no_shadow.cpp  no_shadow.h  sw_traced_shadow.cpp  sw_traced_shadow.h
imgui/: imgui.cpp  imgui.h
spark/: spark.cpp  spark.h
